--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   	<!-- Menu -->
   	<nav class="menu" id="theMenu">
   		<div class="menu-wrap">
-  			<h1 class="logo"><a href="index.html#home" class="smoothScroll">Home</a></h1>
+  			<h1 class="logo"><a href="#home" class="smoothScroll">Home</a></h1>
   			<i class="icon-remove menu-close"></i>
   			<a href="#about" class="smoothScroll">About</a>
   			<a href="#experience" class="smoothScroll">Experience</a>
@@ -54,6 +54,8 @@
   		<!-- Menu button -->
   		<div id="menuToggle"><i class="icon-reorder"></i></div>
   	</nav>
+
+    <!-- main section-->
   	<section id="home" name="home"></section>
   	<div id="headerwrap">
   		<div class="container">
