--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   			<div class="row centered">
   				<div class="col-lg-12">
   					<h1>Chu Shao</h1>
-  					<h3>Software Engineer | Deejay | <a href="mailto:chu@cshao.me">chu@cshao.me</a></h3>
+  					<h3>Software Engineer | <a href="mailto:chu@cshao.me">chu@cshao.me</a></h3>
   				</div><!--/.col-lg-12 -->
   			</div><!--/.row -->
   		</div><!--/.container -->
@@ -79,7 +79,7 @@
   					<h5>ABOUT</h5>
   				</div>
   				<div class="col-lg-6">
-  					<p>I'm a Software Engineer at Udemy and on the side my interests are in Ubiquitous Computing and Internet of Things.</p>
+  					<p>I'm a Senior Software Engineer at Udemy and on the side my interests are in Ubiquitous Computing and Internet of Things.</p>
   				</div>
   				<div class="col-lg-3" id="resume">
   					<p ><a href="assets/Chu_Shao_Resume.pdf"><i class="icon-file"></i><sm>DOWNLOAD RESUME</sm></a> </p>
@@ -98,10 +98,10 @@
   				<h5>WORK</h5>
   			</div>
   			<div class="col-lg-6">
-  				<p><t>Software Engineer</t><br/>
+  				<p><t>Senior Software Engineer</t><br/>
   					Udemy <br/>
   				</p>
-  				<p>Software Engineer on the Growth Engineering team. <br>
+  				<p>Senior Software Engineer on the Growth Engineering team. <br>
           Work with our growth team and our web applications team to generate new features related to growth hacking.</p>
                         </div>
   			<div class="col-lg-3">
@@ -448,9 +448,6 @@
   								<p><t>LINKS</t></br>
   									<a href="https://www.github.com/chushao">Github</a><br>
   									<a href="http://www.linkedin.com/in/chushao">Linkedin</a><br>
-  									<a href="http://www.coderwall.com/cshao">Coderwall</a><br>
-  									<a href="http://www.mixcloud.com/Pikachuu/">Mixcloud</a><br>
-  									<a href="http://www.djchuwy.com/">DJChuwy</a>
   								</p>
   							</div>
   						</div><!--/.row -->
